--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -870,12 +870,9 @@ section.readings-status {
             margin: 5px auto 10px;
         }
     }
-    .title {
-        margin-left: 20px;
-        text-align: center;
-        h3 {
+    .section-heading {
+        h2 {
             color: white;
-            font-size: 30px;
         }
     }
     .item {
