--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -56,6 +56,15 @@ p.smaller {
     margin-bottom: 10px;
 }
 
+.form-error {
+    color: @theme-tertiary;
+    font-size: 16px;
+    text-align: center;
+    a {
+        font-weight: 900;
+    }
+}
+
 input, textarea {
     display: block;
     padding: 10px;
