--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -105,40 +105,54 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Взяти почитати</h2>
-                        <p class="text-muted">
-                            Швидше заповнюй цю форму! Власник книги отримає сповіщення про те, що ти хочеш почитати книгу "Людина розумна" і надішле тобі книгу за цими даними.
-                        </p>
+                        {% if request.user.is_authenticated %}
+                            <p class="text-muted">
+                                Швидше заповнюй цю форму! Власник книги отримає сповіщення про те, що ти хочеш почитати книгу "{{ book.name }}" і надішле тобі книгу за цими даними.
+                            </p>
+                            {% if not request.user.has_enough_to_read %}
+                                <p class="text-muted form-error">
+                                    На жаль, в тебе немає можливостей, щоб взяти почитати цю книгу. <a href="{% url 'book:add' %}">Додай свою книжку</a> на сайт, і отримай за це <span class="delighted">3 можливості</span>.
+                                </p>
+                            {% endif %}
+                        {% endif %}
                         <hr>
                     </div>
                 </div>
             </div>
-            <form action="{% url 'book:booking' %}" class="tertiary" method="POST">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        {{ booking_form.full_name.label_tag }}
-                        <strong>{{ booking_form.full_name.errors.as_text }}</strong>
-                        {{ booking_form.full_name }}
+            {% if request.user.has_enough_to_read %}
+                <form action="{% url 'book:detail' book.pk %}" method="POST">
+                    {% csrf_token %}
+                    <div class="row">
+                        {% if form.non_field_errors %}
+                            {% for err in form.non_field_errors %}
+                                <p class="form-error">{{ err }}</p>
+                            {% endfor %}
+                        {% endif %}
+                        <div class="col-lg-6 col-md-6">
+                            {{ form.full_name.label_tag }}
+                            <strong>{{ form.full_name.errors.as_text }}</strong>
+                            {{ form.full_name }}
 
-                        {{ booking_form.phone.label_tag }}
-                        <strong>{{ booking_form.phone.errors.as_text }}</strong>
-                        {{ booking_form.phone }}
-                    </div>
-                    <div class="col-lg-6 col-md-6">
-                        {{ booking_form.city.label_tag }}
-                        <strong>{{ booking_form.city.errors.as_text }}</strong>
-                        {{ booking_form.city }}
+                            {{ form.phone.label_tag }}
+                            <strong>{{ form.phone.errors.as_text }}</strong>
+                            {{ form.phone }}
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            {{ form.city.label_tag }}
+                            <strong>{{ form.city.errors.as_text }}</strong>
+                            {{ form.city }}
 
-                        {{ booking_form.novaposhta_number.label_tag }}
-                        <strong>{{ booking_form.novaposhta_number.errors.as_text }}</strong>
-                        {{ booking_form.novaposhta_number }}
+                            {{ form.novaposhta_number.label_tag }}
+                            <strong>{{ form.novaposhta_number.errors.as_text }}</strong>
+                            {{ form.novaposhta_number }}
+                        </div>
+                        {{ form.book }}
                     </div>
-                    {{ booking_form.book }}
-                </div>
-                <div class="text-center vertical-center">
-                    <button class="btn btn-filled-tertiary btn-xl" type="submit">Надіслати</button>
-                </div>
-            </form>
+                    <div class="text-center vertical-center">
+                        <button class="btn btn-filled-tertiary btn-xl" type="submit">Надіслати</button>
+                    </div>
+                </form>
+            {% endif %}
         </div>
     </section>
     <section id="contact" class="contact bg-primary">
@@ -158,3 +172,13 @@
         </div>
     </section>
 {% endblock content %}
+
+{% block js %}
+    {% if anchor %}
+        <script type="text/javascript">
+            $('html, body').animate({
+                scrollTop: $("#{{ anchor }}").offset().top
+            }, 1500);
+        </script>
+    {% endif %}
+{% endblock js %}
