User feedback to reading

--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -611,6 +611,13 @@ section.form-section {
     }
 }
 
+section.form-section.feedback .book{
+    img {
+        width: 230px;
+        box-shadow: 0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
+    }
+}
+
 section.history {
     .text-muted {
         color: @theme-principal-text;
