--- a/book/templates/book/includes/books_timeline.html
+++ b/book/templates/book/includes/books_timeline.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="timeline-body">
                     <p class="text-muted">
-                        {{ book_reading.feelings }}
+                        {{ book_reading.feedback }}
                     </p>
                 </div>
             </div>
