Main photo change

--- a/common/templates/common/main.html
+++ b/common/templates/common/main.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-sm-5">
                     <div class="device-container">
-                        <img src="{% static "img/books.jpg" %}" class="img-responsive" alt="">
+                        <img src="{% static "img/books.png" %}" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="clearfix"></div>
