--- a/static/css/new-age.css
+++ b/static/css/new-age.css
@@ -330,19 +330,10 @@ header .header-content .header-content-inner h1 {
   margin-bottom: 30px;
   font-size: 30px;
 }
-header .header-content .header-content-inner .list-badges {
-  margin-bottom: 25px;
-}
-header .header-content .header-content-inner .list-badges img {
-  height: 50px;
-  margin-bottom: 25px;
-}
 header .device-container {
   max-width: 300px;
   margin: 0 auto 100px;
-}
-header .device-container .screen img {
-  border-radius: 3px;
+  padding: 0;
 }
 @media (min-width: 768px) {
   header {
@@ -365,8 +356,12 @@ header .device-container .screen img {
   }
   header .device-container {
     max-width: none;
-    max-height: calc(0vh);
-    margin: 100px auto 0;
+    height: 100vh;
+  }
+  header .device-container img {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-55%);
   }
 }
 @media (min-width: 992px) {
