--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -68,7 +68,7 @@ p.smaller {
 input, textarea {
     display: block;
     padding: 10px;
-    margin: 20px 0;
+    margin-bottom: 20px;
     width: 100%;
     line-height: 25px;
     border-radius: 5px;
@@ -83,6 +83,9 @@ input, textarea {
         }
     }
 
+}
+label {
+    font-weight: normal;
 }
 
 // Navigation
