--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -178,7 +178,7 @@
         <script type="text/javascript">
             $('html, body').animate({
                 scrollTop: $("#{{ anchor }}").offset().top
-            }, 1500);
+            }, 1250, 'easeInOutExpo');
         </script>
     {% endif %}
 {% endblock js %}
