--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -511,26 +511,24 @@ section.contact {
 /* --- Single book page --- */
 section.single-book {
     text-align: left;
+    font-size: 20px;
     img.book-image{
-        max-height: 100vh;
-        font-size: 17px;
-        box-shadow: 8px 8px 25px #aaa;
+        box-shadow: 0 19px 38px rgba(0,0,0,.3), 0 15px 12px rgba(0,0,0,.22);
     }
     div.attributes {
         ul {
             list-style-type: none;
             padding: 0;
         }
-        a {
-            font-weight: bold;
+        li {
+            margin-bottom: 5px;
         }
     }
     a {
         color: @theme-tertiary;
     }
     p {
-        margin-top: 10px;
-        font-size: 15px;
+        margin-top: 20px;
     }
 }
 
