--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -49,6 +49,47 @@
                     <div class="description">
                         {{ book.description }}
                     </div>
+                    <hr>
+                    {% with book.last_reading as reading %}
+                        {% if reading.user == request.user or reading.book.current_owner == request.user %}
+                            <div class="pipeline alert alert-info">
+                                <i class="fa fa-exclamation" aria-hidden="true"></i>
+                                <p>
+                                    {% if reading.user == request.user %}
+                                        {% if not reading.is_confirmed and not reading.is_read %}
+                                            {% blocktrans %}
+                                                Ви надіслали заявку, щоб почитати цю книгу, проте людина у якої вона зараз знаходиться, ще не підтвердила надсилання книги! Як тільки вона це зробить - ми вас повідомимо! Очікуйте сповіщення!
+                                            {% endblocktrans %}    
+                                        {% elif reading.is_confirmed %}
+                                            {% blocktrans %}
+                                                Користувач, в якого зараз ця книга підтвердив, що надішле цю книгу не пізніще як через 2 дні, або вже надіслав. Коли ви закінчите читати, поверніть книгу на сайт, натиснувши кнопку нижче. На читання книги, у вас 14 днів.
+                                            {% endblocktrans %}    
+                                            <form action="{% url 'book:book-read' reading.id %}" method="POST">{% csrf_token %}
+                                                <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Прочитав!" %}</button>
+                                            </form>
+                                        {% elif reading.is_read %}
+                                            {% blocktrans %}
+                                                Ви прочитали цю книгу і повернули її на сайт. Тепер вона чекає нового читача! Книга зберігається у вас, та як тільки хтось оформить заявку на її читання, вам прийде сповіщення, і ви зобов'язані надіслати книгу за даними протягом 2 днів.
+                                            {% endblocktrans %}    
+                                        {% endif %}
+                                    {% elif reading.book.current_owner == request.user %}
+                                        {% if not reading.is_confirmed and not reading.is_read %}
+                                            {% blocktrans %}
+                                                Ви - власник, цієї книги. Користувач <a href="reading.user.get_absolute_url">{{ reading.user.get_full_name }}</a> хоче взяти її почитати. Натисніть кнопку, щоб підтвердити, що ви надішлете книгу Новою Поштою за <a href="">вказаними даними</a> протягом 2 днів.
+                                            {% endblocktrans %}    
+                                            <form action="{% url 'book:owner-confirm' reading.id %}" method="POST">{% csrf_token %}
+                                                <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Підтверджую!" %}</button>
+                                            </form>
+                                        {% elif reading.is_confirmed %}
+                                            {% blocktrans %}
+                                                Ви підтвердили надсилання книги Новою Поштою! <a href="reading.user.get_absolute_url">{{ reading.user.get_full_name }}</a> отримав сповіщення і, можливо, вже читає книгу! Дякуємо вам!
+                                            {% endblocktrans %}    
+                                        {% endif %}
+                                    {% endif %}
+                                </p>
+                            </div>
+                        {% endif %}
+                    {% endwith %}
                 </div>
             </div>
         </div>
