--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -97,7 +97,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>{{ user.get_full_name }}</h2>
-                        <p class="text-muted">{% trans "прочитав книг:" %} {{ user.book_readings.all.count }}</p>
+                        <p class="text-muted">{% trans "прочитав книг:" %} {{ user.book_readings.read.count }}</p>
                         <hr>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="container">
                     <div class="col-lg-12">
-                        {% include "book/includes/books_timeline.html" with book_readings=user.book_readings.all user_timeline=True display_books=True %}
+                        {% include "book/includes/books_timeline.html" with book_readings=user.book_readings.read user_timeline=True display_books=True %}
                     </div>
                 </div>
             </div>
