--- a/book/templates/book/feedback.html
+++ b/book/templates/book/feedback.html
@@ -7,11 +7,11 @@
 
 {% block content %}
     <section id="form-section" class="form-section feedback bg-primary">
-        <form method="POST">
-            {% csrf_token %}
-            <div class="container">
-                <h1>{% trans "Додати відгук про книгу" %}</h1>
-                <div class="row">
+        <div class="container">
+            <div class="row">
+                {% block messages %}{{ block.super }}{% endblock messages %}
+                <form method="POST">{% csrf_token %}
+                    <h1>{% trans "Додати відгук про книгу" %}</h1>
                     {% if form.errors %}
                         <div class="alert alert-danger" role="alert">{% trans "Виправте помилки нижче" %}</div>
                     {% endif %}
@@ -35,13 +35,18 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
+                        <p>
+                            {% blocktrans with book_name=book.name book_url=book.get_absolute_url %}
+                                Розкажіть трішки про <a href="{{ book_url }}">"{{ book_name }}"</a>. Які враженя викликала ця книга у вас? Що вам сподобалось/не сподобалось? Що цікавого в цій книжці? Чи радите почитати її іншим?
+                            {% endblocktrans %}
+                        </p>
                         {{ form.feedback }}
                         <div class="text-center">
                             <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Надіслати" %}</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
-        </form>
+        </div>
     </section>
 {% endblock content %}
